# pilecv4j

./: .gitignore  README.md  clean.sh  convert.sh  env.sh  install.sh  os.sh  pom.xml
docker-nginx-rtmp/: .gitignore  .gitlab-ci.yml  .gitmodules  pom.xml
docker-nginx-rtmp/build-tools/: .gitignore  README.md  build.sh  effective-pom-json.sh  env.sh  find-docker-image-from-pom.sh  find-project-version-from-pom.sh  fixup-hosts-file.sh  install-eBus.sh  install-from-zip.sh  install-spinnaker.sh  lookup-protobuf-version.sh  preamble.sh  remove-image-tobe-pushed.sh
docs/: EncodingContext.odp  MediaContext.odp  Stream Context.odp
gst-breakout/: .gitignore  assembly.xml  pom.xml
gst-breakout/src/main/c/: CMakeLists.txt  gstbreakout-marshal.h  gstbreakout.c  gstbreakout.h
lib-ffmpeg/: pom.xml
lib-gstreamer/: pom.xml
lib-image/: pom.xml
lib-ipc/: pom.xml
lib-nr/: pom.xml
lib-objdetect/: pom.xml
lib-python/: pom.xml
lib-tf/: pom.xml
lib-tracking/: pom.xml
lib-util/: pom.xml
native/: assembly.xml  pom.xml  setup-eclipse.sh
native-common-include/: CMakeHelpers.cmake
native-common-include/include/: imagemaker.h  pilecv4j_utils.h
native-ffmpeg/: CMakeLists.txt  README.md  pom.xml  run.sh
native-ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_codes.cpp  ffmpeg_wrapper.cpp  testjunk.cpp
native-ffmpeg/src/main/cpp/api/: EncodingContext.cpp  EncodingContext.h  MediaContext.cpp  MediaContext.h  MediaDataSource.cpp  MediaDataSource.h  MediaOutput.cpp  MediaOutput.h  MediaProcessor.cpp  MediaProcessor.h  MediaProcessorChain.cpp  MediaProcessorChain.h  Muxer.cpp  Muxer.h  PacketFilter.cpp  PacketFilter.h  PacketSourceInfo.h  StreamContext.cpp  StreamContext.h  StreamDetails.cpp  StreamDetails.h  StreamSelector.cpp  StreamSelector.h
native-ffmpeg/src/main/cpp/filters/: FirstVideoStreamSelector.cpp  FirstVideoStreamSelector.h  JavaPacketFilter.cpp  JavaPacketFilter.h  JavaStreamSelector.cpp  JavaStreamSelector.h
native-ffmpeg/src/main/cpp/muxers/: DefaultMuxer.cpp  DefaultMuxer.h  SegmentedMuxer.cpp  SegmentedMuxer.h  UriMuxer.cpp  UriMuxer.h
native-ffmpeg/src/main/cpp/output/: CustomOutput.cpp  CustomOutput.h  UriOutput.cpp  UriOutput.h
native-ffmpeg/src/main/cpp/processors/: DecodedFrameProcessor.cpp  DecodedFrameProcessor.h  Remuxer.cpp  Remuxer.h  UriRemuxer.cpp  UriRemuxer.h
native-ffmpeg/src/main/cpp/selectors/: FirstVideoStreamSelector.cpp  FirstVideoStreamSelector.h  JavaStreamSelector.cpp  JavaStreamSelector.h
native-ffmpeg/src/main/cpp/sources/: CustomMediaDataSource.cpp  CustomMediaDataSource.h  UriMediaDataSource.cpp  UriMediaDataSource.h
native-ffmpeg/src/main/cpp/utils/: FakeMutexGuard.h  IMakerManager.cpp  IMakerManager.h  Synchronizer.cpp  Synchronizer.h  ffmpeg_codes.cpp  log.cpp  log.h  pilecv4j_ffmpeg_utils.cpp  pilecv4j_ffmpeg_utils.h  timing.h
native-gstreamer/: pom.xml
native-gstreamer/src/main/c/: CMakeLists.txt  gstbreakout-marshal.c  gstbreakout.c  gstbreakout.h  gstmat.cpp  gstmat.h
native-image/: CMakeLists.txt  pom.xml
native-image/src/main/cpp/: CMakeLists.txt
native-image/src/main/cpp/mjpeg/: byteswap.h
native-image/src/main/cpp/opencv/: CvRasterNative.cpp  imagemaker.cpp
native-image/src/main/cpp/sources/houghspace/: Transform.cpp
native-image/src/main/cpp/sources/include/: jpegtoavi.h
native-image/src/main/cpp/sources/mjpeg/: byteswap.h  jpegtoavi.cpp
native-image/src/main/cpp/sources/opencv/: CvRasterNative.cpp  gpumat.cpp  gstbridge.cpp  imagemaker.cpp
native-image/src/main/cpp/sources/utils/: log.cpp
native-image/src/main/cpp/utils/: log.h
native-ipc/: CMakeLists.txt  assembly.xml  pom.xml
native-ipc/src/main/cpp/utils/: SharedMemory.cpp  SharedMemory.h  cvtypes.h  log.cpp
native-ipc/src/main/cpp/utils/platform/: SharedMemoryImpl.h  errHandlingImpl.h
native-ipc/src/main/cpp/utils/platform/posix/: SharedMemoryImpl.cpp
native-ipc/src/main/cpp/utils/platform/systemv/: SharedMemoryImpl.cpp
native-ipc/src/main/cpp/utils/platform/windows/: SharedMemoryImpl.cpp  SharedMemoryTypes.h  errHandlingImpl.h
native-ipc/src/utils/: SharedMemory.cpp  SharedMemory.h  ShmQueue.cpp  ShmQueue.h  errHandling.cpp  errHandling.h  log.cpp  log.h  timing.h
native-ipc/src/utils/platform/: SharedMemoryImpl.h  SharedMemoryTypes.h  errHandlingImpl.h
native-ipc/src/utils/platform/errno/: errHandlingImpl.cpp  errHandlingImpl.h
native-ipc/src/utils/platform/posix/: SharedMemoryImpl.cpp  errHandlingImpl.cpp
native-ipc/src/utils/platform/systemv/: SharedMemoryImpl.cpp  SharedMemoryTypes.h
native-ipc/src/utils/platform/win/: SharedMemoryImpl.cpp  errHandlingImpl.cpp  errHandlingImpl.h
native-ipc/src/utils/platform/windows/: errHandlingImpl.cpp
native-leaks/: pom.xml  setup-eclipse.sh
native-leaks/src/main/cpp/: CMakeLists.txt
native-leaks/src/main/cpp/sources/: leak.cpp  leak.h  overrides.c  replace.cpp
native-nr/: CMakeLists.txt  pom.xml
native-nr/src/main/cpp/: CMakeLists.txt
native-nr/src/main/cpp/nr/: dbrent.cpp  minimizer.cpp  nrutil.h
native-nr/src/main/cpp/sources/nr/: brent.cpp  dbrent.cpp  minimizer.c  minimizer.cpp  mnbrak.cpp  nrutil.cpp  nrutil.h  powell.cpp
native-python/: CMakeLists.txt  pom.xml
native-python/src/main/cpp/: CMakeLists.txt  GilGuard.h  ImageSource.cpp  ImageSource.h  JavaHandle.cpp  JavaHandle.h  KogSystem.cpp  KogSystem.h  PythonEnvironment.cpp  PythonEnvironment.h  RunPythonFunction.cpp  RunPythonFunction.h  kognition.cpp  log.cpp  log.h  module.cpp
native-util/: pom.xml
native/linux-amd64-jiminger/: assembly.xml  com.jiminger.lib.properties  (+1 more)
native/src/main/cpp/: CMakeLists.txt
native/src/main/cpp/sources/houghspace/: Transform.cpp
native/src/main/cpp/sources/include/: jpegtoavi.h
native/src/main/cpp/sources/mjpeg/: byteswap.h  jpegtoavi.cpp
native/src/main/cpp/sources/nr/: Minimizer.cpp  brent.cpp  dbrent.c  minimizer.c  nrutil.cpp  nrutil.h  powell.cpp
native/src/main/cpp/sources/opencv/: CvRasterNative.cpp
native/src/main/cpp/sources/tensor/: TensorUtils.cpp
parent/: pom.xml
s8/: pom.xml
settings/: pom.xml
test-jiminger/: pom.xml
(+409 files in other folders)
